gui/src/lhpn2sbml/parser/Parser.java
/* Generated By:JavaCC: Do not edit this line. Parser.java */
  package lhpn2sbml.parser;

  public class Parser implements ParserConstants {

    public Parser (String property) {
      this(new java.io.ByteArrayInputStream(property.getBytes()));
    }

    public boolean parseProperty() {
      try {
        Goal();
        return true;
      }
      catch (Exception e) {
        System.out.println(e.toString());
        return false;
      }
    }

    public static void main(String [] args) {
      try {
         Parser p = new Parser(System.in);
         //Parser p = new Parser(args[0]);
         p.Goal();
      }
      catch (Exception e) {
          System.out.println(e.toString());
      }

    }

  final public void Goal() throws ParseException {
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case UNIFORM:
      case NORMAL:
      case EXPONENTIAL:
      case GAMMA:
      case LOGNORMAL:
      case CHISQ:
      case LAPLACE:
      case CAUCHY:
      case RAYLEIGH:
      case POISSON:
      case BINOMIAL:
      case BERNOULLI:
      case BITNOT:
      case BITOR:
      case BITAND:
      case BITXOR:
      case INT:
      case BOOL:
      case BIT:
      case RATE:
      case OBRACE:
      case BOOL_FALSE:
      case BOOL_TRUE:
      case EG:
      case EF:
      case AG:
      case AF:
      case Pr:
      case Ss:
      case INF:
      case ID:
      case INTEGER:
      case REAL:
      case MINUS:
      case OPAR:
      case NOT:
        ;
        break;
      default:
        jj_la1[0] = jj_gen;
        break label_1;
      }
      Property();
    }
    jj_consume_token(0);
  }

  final public void Property() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case OBRACE:
    case EG:
    case EF:
    case AG:
    case AF:
      Props();
      break;
    case UNIFORM:
    case NORMAL:
    case EXPONENTIAL:
    case GAMMA:
    case LOGNORMAL:
    case CHISQ:
    case LAPLACE:
    case CAUCHY:
    case RAYLEIGH:
    case POISSON:
    case BINOMIAL:
    case BERNOULLI:
    case BITNOT:
    case BITOR:
    case BITAND:
    case BITXOR:
    case INT:
    case BOOL:
    case BIT:
    case RATE:
    case BOOL_FALSE:
    case BOOL_TRUE:
    case Pr:
    case Ss:
    case INF:
    case ID:
    case INTEGER:
    case REAL:
    case MINUS:
    case OPAR:
    case NOT:
      Probproperty();
      break;
    default:
      jj_la1[1] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void Probproperty() throws ParseException {
    if (jj_2_1(3)) {
      jj_consume_token(Pr);
      Relop();
      jj_consume_token(REAL);
      jj_consume_token(OBRACE);
      Probprop();
      jj_consume_token(CBRACE);
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case Pr:
        jj_consume_token(Pr);
        jj_consume_token(EQUAL);
        jj_consume_token(QMARK);
        jj_consume_token(OBRACE);
        Probprop();
        jj_consume_token(CBRACE);
        break;
      default:
        jj_la1[2] = jj_gen;
        if (jj_2_2(3)) {
          jj_consume_token(Ss);
          Relop();
          jj_consume_token(REAL);
          jj_consume_token(OBRACE);
          Probproperty();
          jj_consume_token(CBRACE);
        } else {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case Ss:
            jj_consume_token(Ss);
            jj_consume_token(EQUAL);
            jj_consume_token(QMARK);
            jj_consume_token(OBRACE);
            Probproperty();
            jj_consume_token(CBRACE);
            break;
          case UNIFORM:
          case NORMAL:
          case EXPONENTIAL:
          case GAMMA:
          case LOGNORMAL:
          case CHISQ:
          case LAPLACE:
          case CAUCHY:
          case RAYLEIGH:
          case POISSON:
          case BINOMIAL:
          case BERNOULLI:
          case BITNOT:
          case BITOR:
          case BITAND:
          case BITXOR:
          case INT:
          case BOOL:
          case BIT:
          case RATE:
          case BOOL_FALSE:
          case BOOL_TRUE:
          case INF:
          case ID:
          case INTEGER:
          case REAL:
          case MINUS:
          case OPAR:
          case NOT:
            Hsf();
            break;
          default:
            jj_la1[3] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
          }
        }
      }
    }
  }

  final public void Probprop() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case PG:
      jj_consume_token(PG);
      Bound();
      jj_consume_token(OPAR);
      Probproperty();
      jj_consume_token(CPAR);
      break;
    case PF:
      jj_consume_token(PF);
      Bound();
      jj_consume_token(OPAR);
      Probproperty();
      jj_consume_token(CPAR);
      break;
    case UNIFORM:
    case NORMAL:
    case EXPONENTIAL:
    case GAMMA:
    case LOGNORMAL:
    case CHISQ:
    case LAPLACE:
    case CAUCHY:
    case RAYLEIGH:
    case POISSON:
    case BINOMIAL:
    case BERNOULLI:
    case BITNOT:
    case BITOR:
    case BITAND:
    case BITXOR:
    case INT:
    case BOOL:
    case BIT:
    case RATE:
    case BOOL_FALSE:
    case BOOL_TRUE:
    case Pr:
    case Ss:
    case INF:
    case ID:
    case INTEGER:
    case REAL:
    case MINUS:
    case OPAR:
    case NOT:
      Probproperty();
      jj_consume_token(PU);
      Bound();
      Probproperty();
      break;
    default:
      jj_la1[4] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

//void Props():
//{}
//{
// LOOKAHEAD(3) Prop() Andprop()
// | LOOKAHEAD(3) Prop() Orprop()
// | LOOKAHEAD(3) Prop() Impliesprop()
// | Prop()
//}
  final public void Props() throws ParseException {
    Prop();
    Props_prime();
  }

  final public void Props_prime() throws ParseException {
    Andprop();
  }

  final public void Andprop() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case AND:
      jj_consume_token(AND);
      Prop();
      Andprop();
      break;
    default:
      jj_la1[5] = jj_gen;

    }
  }

  final public void Orprop() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case OR:
      jj_consume_token(OR);
      Prop();
      Orprop();
      break;
    default:
      jj_la1[6] = jj_gen;

    }
  }

  final public void Impliesprop() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case MINUS:
      jj_consume_token(MINUS);
      jj_consume_token(GREATERTHAN);
      Prop();
      Impliesprop();
      break;
    default:
      jj_la1[7] = jj_gen;

    }
  }

//void Prop():
//{}
//{
// LOOKAHEAD(3) Fronttype() <OPAR> Bound() Hsf() <CPAR>
// | Fronttype() <OPAR> Bound() Prop()<CPAR>
// | Midprop()
//}
  final public void Prop() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case EG:
    case EF:
    case AG:
    case AF:
      Fronttype();
      Bound();
      jj_consume_token(OPAR);
      Prop_prime();
      jj_consume_token(CPAR);
      break;
    case OBRACE:
      Midprop();
      break;
    default:
      jj_la1[8] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void Prop_prime() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case UNIFORM:
    case NORMAL:
    case EXPONENTIAL:
    case GAMMA:
    case LOGNORMAL:
    case CHISQ:
    case LAPLACE:
    case CAUCHY:
    case RAYLEIGH:
    case POISSON:
    case BINOMIAL:
    case BERNOULLI:
    case BITNOT:
    case BITOR:
    case BITAND:
    case BITXOR:
    case INT:
    case BOOL:
    case BIT:
    case RATE:
    case BOOL_FALSE:
    case BOOL_TRUE:
    case INF:
    case ID:
    case INTEGER:
    case REAL:
    case MINUS:
    case OPAR:
    case NOT:
      Hsf();
      break;
    case EG:
    case EF:
    case AG:
    case AF:
      Fronttype();
      Bound();
      jj_consume_token(OPAR);
      Prop_prime();
      jj_consume_token(CPAR);
      break;
    case OBRACE:
      Midprop();
      break;
    default:
      jj_la1[9] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

// void Midprop():
//{}
//{
// <OPAR> Propinner() <CPAR> 
//}
  final public void Midprop() throws ParseException {
    jj_consume_token(OBRACE);
    Propinner();
    jj_consume_token(CBRACE);
  }

//void Propinner():
//{}
//{
// LOOKAHEAD(3) Prop() Midtype() Bound() Prop()
// | LOOKAHEAD(3) Prop() Midtype() Bound() Hsf()
// | LOOKAHEAD(3) Hsf() Midtype() Bound() Prop()
// | Hsf() Midtype() Bound() Hsf()
//}
  final public void Propinner() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case UNIFORM:
    case NORMAL:
    case EXPONENTIAL:
    case GAMMA:
    case LOGNORMAL:
    case CHISQ:
    case LAPLACE:
    case CAUCHY:
    case RAYLEIGH:
    case POISSON:
    case BINOMIAL:
    case BERNOULLI:
    case BITNOT:
    case BITOR:
    case BITAND:
    case BITXOR:
    case INT:
    case BOOL:
    case BIT:
    case RATE:
    case BOOL_FALSE:
    case BOOL_TRUE:
    case INF:
    case ID:
    case INTEGER:
    case REAL:
    case MINUS:
    case OPAR:
    case NOT:
      Hsf();
      Midtype();
      Bound();
      Propinner_prime();
      break;
    case OBRACE:
    case EG:
    case EF:
    case AG:
    case AF:
      Prop();
      Midtype();
      Bound();
      Propinner_prime();
      break;
    default:
      jj_la1[10] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void Propinner_prime() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case OBRACE:
    case EG:
    case EF:
    case AG:
    case AF:
      Prop();
      break;
    case UNIFORM:
    case NORMAL:
    case EXPONENTIAL:
    case GAMMA:
    case LOGNORMAL:
    case CHISQ:
    case LAPLACE:
    case CAUCHY:
    case RAYLEIGH:
    case POISSON:
    case BINOMIAL:
    case BERNOULLI:
    case BITNOT:
    case BITOR:
    case BITAND:
    case BITXOR:
    case INT:
    case BOOL:
    case BIT:
    case RATE:
    case BOOL_FALSE:
    case BOOL_TRUE:
    case INF:
    case ID:
    case INTEGER:
    case REAL:
    case MINUS:
    case OPAR:
    case NOT:
      Hsf();
      break;
    default:
      jj_la1[11] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void Fronttype() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case AG:
      jj_consume_token(AG);
      break;
    case AF:
      jj_consume_token(AF);
      break;
    case EG:
      jj_consume_token(EG);
      break;
    case EF:
      jj_consume_token(EF);
      break;
    default:
      jj_la1[12] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void Midtype() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case AU:
      jj_consume_token(AU);
      break;
    case EU:
      jj_consume_token(EU);
      break;
    default:
      jj_la1[13] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void Bound() throws ParseException {
    if (jj_2_3(2)) {
      jj_consume_token(OSQUARE);
      Relop();
      Hsf();
      jj_consume_token(CSQUARE);
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case OSQUARE:
        jj_consume_token(OSQUARE);
        Hsf();
        jj_consume_token(COMMA);
        Hsf();
        jj_consume_token(CSQUARE);
        break;
      default:
        jj_la1[14] = jj_gen;

      }
    }
  }

  final public void Hsf() throws ParseException {
    Andexpr();
    Hsf_prime();
  }

  final public void Hsf_prime() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case OR:
      jj_consume_token(OR);
      Andexpr();
      Hsf_prime();
      break;
    case IMPLIC:
      jj_consume_token(IMPLIC);
      Andexpr();
      Hsf_prime();
      break;
    default:
      jj_la1[15] = jj_gen;

    }
  }

  final public void Andexpr() throws ParseException {
    Relation();
    Andexpr_prime();
  }

  final public void Andexpr_prime() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case AND:
      jj_consume_token(AND);
      Relation();
      Andexpr_prime();
      break;
    default:
      jj_la1[16] = jj_gen;

    }
  }

  final public void Relation() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case UNIFORM:
    case NORMAL:
    case EXPONENTIAL:
    case GAMMA:
    case LOGNORMAL:
    case CHISQ:
    case LAPLACE:
    case CAUCHY:
    case RAYLEIGH:
    case POISSON:
    case BINOMIAL:
    case BERNOULLI:
    case BITNOT:
    case BITOR:
    case BITAND:
    case BITXOR:
    case INT:
    case BOOL:
    case RATE:
    case BOOL_FALSE:
    case BOOL_TRUE:
    case INF:
    case ID:
    case INTEGER:
    case REAL:
    case MINUS:
    case OPAR:
      Arithexpr();
      Relation_prime();
      break;
    case NOT:
      jj_consume_token(NOT);
      Relation();
      break;
    case BIT:
      jj_consume_token(BIT);
      jj_consume_token(OPAR);
      Arithexpr();
      jj_consume_token(COMMA);
      Arithexpr();
      jj_consume_token(CPAR);
      break;
    default:
      jj_la1[17] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void Relation_prime() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case EQUAL:
    case LESSTHAN:
    case GREATERTHAN:
    case GEQ:
    case LEQ:
      Relop();
      Arithexpr();
      break;
    default:
      jj_la1[18] = jj_gen;

    }
  }

  final public void Arithexpr() throws ParseException {
    Multexpr();
    Arithexpr_prime();
  }

  final public void Arithexpr_prime() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case PLUS:
      jj_consume_token(PLUS);
      Multexpr();
      Arithexpr_prime();
      break;
    case MINUS:
      jj_consume_token(MINUS);
      Multexpr();
      Arithexpr_prime();
      break;
    default:
      jj_la1[19] = jj_gen;

    }
  }

  final public void Multexpr() throws ParseException {
    Term();
    Multexpr_prime();
  }

  final public void Multexpr_prime() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case MULT:
      jj_consume_token(MULT);
      Term();
      Multexpr_prime();
      break;
    case DIV:
      jj_consume_token(DIV);
      Term();
      Multexpr_prime();
      break;
    case MOD:
      jj_consume_token(MOD);
      Term();
      Multexpr_prime();
      break;
    case POWER:
      jj_consume_token(POWER);
      Term();
      Multexpr_prime();
      break;
    case ID:
      Id();
      break;
    default:
      jj_la1[20] = jj_gen;

    }
  }

  final public void Term() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case OPAR:
      jj_consume_token(OPAR);
      Hsf();
      jj_consume_token(CPAR);
      break;
    case ID:
      Id();
      break;
    case INTEGER:
      jj_consume_token(INTEGER);
      break;
    case REAL:
      jj_consume_token(REAL);
      break;
    case INF:
      jj_consume_token(INF);
      break;
    case RATE:
      jj_consume_token(RATE);
      jj_consume_token(OPAR);
      Id();
      jj_consume_token(CPAR);
      break;
    case INT:
      jj_consume_token(INT);
      jj_consume_token(OPAR);
      Hsf();
      jj_consume_token(CPAR);
      break;
    case MINUS:
      jj_consume_token(MINUS);
      Term();
      break;
    case BOOL_FALSE:
      jj_consume_token(BOOL_FALSE);
      break;
    case BOOL_TRUE:
      jj_consume_token(BOOL_TRUE);
      break;
    case EXPONENTIAL:
    case CHISQ:
    case LAPLACE:
    case CAUCHY:
    case RAYLEIGH:
    case POISSON:
    case BERNOULLI:
    case BITNOT:
    case BOOL:
      Unop();
      jj_consume_token(OPAR);
      Arithexpr();
      jj_consume_token(CPAR);
      break;
    case UNIFORM:
    case NORMAL:
    case GAMMA:
    case LOGNORMAL:
    case BINOMIAL:
    case BITOR:
    case BITAND:
    case BITXOR:
      Binop();
      jj_consume_token(OPAR);
      Arithexpr();
      jj_consume_token(COMMA);
      Arithexpr();
      jj_consume_token(CPAR);
      break;
    default:
      jj_la1[21] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void Relop() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case EQUAL:
      jj_consume_token(EQUAL);
      break;
    default:
      jj_la1[22] = jj_gen;
      if (jj_2_4(2)) {
        jj_consume_token(LESSTHAN);
      } else {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case LEQ:
          jj_consume_token(LEQ);
          break;
        default:
          jj_la1[23] = jj_gen;
          if (jj_2_5(2)) {
            jj_consume_token(GREATERTHAN);
          } else {
            switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
            case GEQ:
              jj_consume_token(GEQ);
              break;
            default:
              jj_la1[24] = jj_gen;
              jj_consume_token(-1);
              throw new ParseException();
            }
          }
        }
      }
    }
  }

  final public void Unop() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case BITNOT:
      jj_consume_token(BITNOT);
      break;
    case EXPONENTIAL:
      jj_consume_token(EXPONENTIAL);
      break;
    case CHISQ:
      jj_consume_token(CHISQ);
      break;
    case LAPLACE:
      jj_consume_token(LAPLACE);
      break;
    case CAUCHY:
      jj_consume_token(CAUCHY);
      break;
    case RAYLEIGH:
      jj_consume_token(RAYLEIGH);
      break;
    case POISSON:
      jj_consume_token(POISSON);
      break;
    case BERNOULLI:
      jj_consume_token(BERNOULLI);
      break;
    case BOOL:
      jj_consume_token(BOOL);
      break;
    default:
      jj_la1[25] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void Binop() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case BITOR:
      jj_consume_token(BITOR);
      break;
    case BITAND:
      jj_consume_token(BITAND);
      break;
    case BITXOR:
      jj_consume_token(BITXOR);
      break;
    case UNIFORM:
      jj_consume_token(UNIFORM);
      break;
    case NORMAL:
      jj_consume_token(NORMAL);
      break;
    case GAMMA:
      jj_consume_token(GAMMA);
      break;
    case LOGNORMAL:
      jj_consume_token(LOGNORMAL);
      break;
    case BINOMIAL:
      jj_consume_token(BINOMIAL);
      break;
    default:
      jj_la1[26] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void Id() throws ParseException {
    jj_consume_token(ID);
  }

  private boolean jj_2_1(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_1(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(0, xla); }
  }

  private boolean jj_2_2(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_2(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(1, xla); }
  }
